--- a/src/pages/DetailPage/OverView/OverView.scss
+++ b/src/pages/DetailPage/OverView/OverView.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0px 66px 0px 66px;
+    margin-top: 102px;
 
     img {
       width: 480px;
@@ -25,17 +26,77 @@
 
       h3 {
         font-size: 32px;
+        margin-top: 16px;
         color: #1c1c1c;
       }
 
       p {
         font-size: 20px;
+        margin-top: 24px;
         color: #838383;
       }
 
       .productLike {
         display: flex;
         justify-content: space-between;
+
+        .totalReview {
+          display: flex;
+          align-items: center;
+
+          .star {
+            margin: 0;
+            margin-right: 10px;
+            font-size: 12px;
+            font-weight: 900;
+            letter-spacing: 5px;
+            color: #58c3cc;
+          }
+
+          .number {
+            margin: 0;
+            margin-right: 5px;
+            font-size: 16px;
+            color: #58c3cc;
+          }
+
+          span {
+            color: #838383;
+          }
+        }
+
+        .price {
+          font-weight: 900;
+          font-size: 32px;
+          color: #1c1c1c;
+        }
+      }
+
+      .productBuy {
+        margin-top: 34px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .subscribeButton {
+          width: 194px;
+          height: 56px;
+          font-size: 18px;
+          background-color: #fff;
+          border: 1px solid #1c1c1c;
+          border-radius: 10px;
+          color: #1c1c1c;
+        }
+
+        .normalButton {
+          width: 194px;
+          height: 56px;
+          font-size: 18px;
+          background-color: #1c1c1c;
+          border: 1px solid #1c1c1c;
+          border-radius: 10px;
+          color: #fff;
+        }
       }
     }
   }
