Add : Mock 데이터 생성 및 컴퍼넌트에 연결 완료

--- a/src/pages/Cart/CartItem/CartItem.scss
+++ b/src/pages/Cart/CartItem/CartItem.scss
@@ -7,11 +7,16 @@
   border-bottom: 1px solid #f0f0f0;
   padding: 20px 0px 20px 0px;
 
+  .imgCover {
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .itemImg {
-    // height: 160px;
-    // width: 155px;
-    height: 130px;
-    width: 150px;
+    width: 80%;
+    height: 80%;
   }
 
   .itemBox {
@@ -73,6 +78,9 @@
         height: 100%;
         border-right: 1px solid #cbcbcb;
 
+        .fa-minus {
+          color: #b2b2b2;
+        }
         img {
           width: 13px;
           opacity: 0.6;
@@ -82,7 +90,9 @@
       .plusBtn {
         height: 100%;
         border-left: 1px solid #cbcbcb;
-
+        .fa-plus {
+          color: #b2b2b2;
+        }
         img {
           width: 13px;
         }
