--- a/src/pages/DetailPage/OverView/OverView.scss
+++ b/src/pages/DetailPage/OverView/OverView.scss
@@ -78,18 +78,8 @@
         justify-content: space-between;
         align-items: center;
 
-        .subscribeButton {
-          width: 194px;
-          height: 56px;
-          font-size: 18px;
-          background-color: #fff;
-          border: 1px solid #1c1c1c;
-          border-radius: 10px;
-          color: #1c1c1c;
-        }
-
-        .normalButton {
-          width: 194px;
+        .productBuyButton {
+          width: 100%;
           height: 56px;
           font-size: 18px;
           background-color: #1c1c1c;
