--- a/src/pages/DetailPage/Toast/Toast.scss
+++ b/src/pages/DetailPage/Toast/Toast.scss
@@ -1,3 +1,20 @@
+.closeBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 72px;
+  height: 56px;
+  top: 300px;
+  right: 420px;
+  font-size: 30px;
+  z-index: 1;
+  border-radius: 4px 4px 0 0;
+  color: #1c1c1c;
+  background-color: #fff;
+  box-shadow: #00000014 0 -12px 24px;
+  cursor: pointer;
+}
 .toast {
   width: 100%;
   position: fixed;
@@ -10,7 +27,136 @@
   .toastContainer {
     display: flex;
     width: 1100px;
+    padding: 40px 16px 56px;
     height: 580.5px;
     justify-content: space-between;
+
+    .selectBox {
+      width: 398px;
+      display: flex;
+      flex-direction: column;
+      border: 1px solid #1c1c1c;
+      border-radius: 5px;
+      cursor: pointer;
+
+      .boxHandle {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 56px;
+        padding: 16px;
+        border-bottom: 1px solid #cbcbcb;
+      }
+    }
+
+    .selectOption {
+      width: 100%;
+      border-radius: 4px;
+      background-color: #fff;
+
+      .option {
+        width: 100%;
+        height: 56px;
+        padding: 16px;
+        border-radius: 4px;
+      }
+    }
+
+    .option:hover {
+      background-color: #f0f0f0;
+    }
+
+    .itemContainer {
+      width: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 32px 0px 32px 0px;
+
+      .itemMain {
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #f0f0f0;
+
+        img {
+          width: 80px;
+          height: 80px;
+        }
+
+        .itemInfoWrap {
+          margin-left: 16px;
+          width: 100%;
+
+          .titleWrap {
+            display: flex;
+            justify-content: space-between;
+          }
+
+          h3 {
+            font-size: 16px;
+            color: #1c1c1c;
+          }
+
+          p {
+            font-size: 14px;
+            color: #838383;
+          }
+
+          .itemCount {
+            width: 100%;
+            display: flex;
+            margin-top: 12px;
+            justify-content: space-between;
+
+            .count {
+              display: flex;
+
+              span {
+                font-size: 16px;
+                font-weight: 900;
+              }
+            }
+          }
+        }
+      }
+    }
+    .itemTotal {
+      display: flex;
+      width: 100%;
+      margin-top: 32px;
+      justify-content: space-between;
+      font-size: 26px;
+      font-weight: 900;
+
+      strong {
+        color: #58c3cc;
+      }
+    }
+
+    .itemBuy {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .cartButton {
+        width: 196px;
+        height: 56px;
+        font-size: 18px;
+        background-color: #fff;
+        border: 1px solid #1c1c1c;
+        border-radius: 10px;
+        color: #1c1c1c;
+      }
+
+      .buyButton {
+        width: 196px;
+        height: 56px;
+        font-size: 18px;
+        background-color: #1c1c1c;
+        border: 1px solid #1c1c1c;
+        border-radius: 10px;
+        color: #fff;
+      }
+    }
   }
 }
