--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -59,6 +59,11 @@
         .subscribeTitle {
           font-size: 19px;
           font-weight: bold;
+          color: #cbcbcb;
+          &.true {
+            color: black;
+            font-weight: bold;
+          }
         }
 
         .subscribeList {
@@ -75,11 +80,17 @@
             align-items: center;
             width: 72px;
             height: 42px;
-            background-color: white;
+            background-color: #f0f0f0;
             border-radius: 25px;
             margin: 5px;
-            border: 1px solid #f0f0f0;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            color: #cbcbcb;
+            cursor: pointer;
+
+            &.true {
+              background-color: white;
+              color: black;
+              box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            }
           }
         }
       }
