--- a/src/pages/DetailPage/Toast/Toast.scss
+++ b/src/pages/DetailPage/Toast/Toast.scss
@@ -73,6 +73,13 @@
       justify-content: space-between;
       padding: 32px 0px 32px 0px;
 
+      .itemContent {
+        overflow-y: scroll;
+      }
+      .itemContent::-webkit-scrollbar {
+        display: none;
+      }
+
       .itemMain {
         display: flex;
         align-items: center;
@@ -123,7 +130,8 @@
     .itemTotal {
       display: flex;
       width: 100%;
-      margin-top: 32px;
+      height: 100px;
+      /* margin-top: 32px; */
       justify-content: space-between;
       font-size: 26px;
       font-weight: 900;
@@ -135,12 +143,21 @@
 
     .itemBuy {
       width: 100%;
+      height: 128px;
       display: flex;
+      align-items: center;
       justify-content: space-between;
+      /* background-color: rgba(0, 0, 0, 0.1); */
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        #ffffff 33.85%
+      );
 
       .cartButton {
         width: 196px;
         height: 56px;
+        margin-top: 70px;
         font-size: 18px;
         background-color: #fff;
         border: 1px solid #1c1c1c;
@@ -151,6 +168,7 @@
       .buyButton {
         width: 196px;
         height: 56px;
+        margin-top: 70px;
         font-size: 18px;
         background-color: #1c1c1c;
         border: 1px solid #1c1c1c;
