--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -35,6 +35,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-bottom: 80px;
 
     .cartBox {
       display: flex;
@@ -46,6 +47,7 @@
       border-radius: 12px;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
       padding: 0px 60px;
+      padding-bottom: 80px;
 
       .subscribeBox {
         display: flex;
