Modify : 메인 페이지 - 제품 리스트 코드 수정중

--- a/src/pages/Main/ProductContent/ProductContent.scss
+++ b/src/pages/Main/ProductContent/ProductContent.scss
@@ -1,7 +1,8 @@
 .ProductContent {
   max-width: 1140px;
   margin: 0 auto;
-  overflow-x: hidden;
+  padding: 0 16px;
+  overflow-x: scroll;
   overflow-y: hidden;
 
   .content {
