--- a/src/pages/Main/ProductContent/Product/product.scss
+++ b/src/pages/Main/ProductContent/Product/product.scss
@@ -1,10 +1,15 @@
-.productRigth {
-  margin-right: 21px;
+.ProductInfo {
+  margin-right: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .product {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    cursor: pointer;
     .productImg {
       width: 250px;
       height: 250px;
