ADD : 상품 비었을 때의 ui 추가, 기존 상품페이지 컴퍼넌트화

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -49,108 +49,28 @@
       padding: 0px 60px;
       padding-bottom: 80px;
 
-      .subscribeBox {
+      .emptyCart {
+        width: 100%;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        width: 100%;
-        border-bottom: 1px solid #f0f0f0;
-        padding-top: 55px;
-        padding-bottom: 30px;
+        padding: 100px 0px 40px 0px;
 
-        .subscribeTitle {
-          font-size: 19px;
-          font-weight: bold;
-          color: #cbcbcb;
-          &.true {
-            color: black;
-            font-weight: bold;
-          }
-        }
-
-        .subscribeList {
-          border-radius: 25px;
-          background-color: #f0f0f0;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          .subscribe {
-            font-size: 17px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 72px;
-            height: 42px;
-            background-color: #f0f0f0;
-            border-radius: 25px;
-            margin: 5px;
-            color: #cbcbcb;
-            cursor: pointer;
-
-            &.true {
-              background-color: white;
-              color: black;
-              box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            }
-          }
-        }
-      }
-
-      .billBox {
-        padding-top: 60px;
-        width: 100%;
-
-        .bill {
-          display: flex;
-          justify-content: space-between;
-          width: 100%;
-          font-size: 18px;
-          margin-bottom: 19px;
-
-          .billPrice {
-            color: gray;
-          }
-        }
-
-        .billGuide {
-          text-align: right;
-          color: #4565c8;
-          border-bottom: 1px solid #f0f0f0;
-          padding-bottom: 20px;
-
-          .fontBold {
-            font-weight: bold;
-          }
-        }
-
-        .totalBill {
-          display: flex;
-          justify-content: space-between;
-          font-size: 20px;
-          font-weight: bold;
-          margin-top: 25px;
-        }
-      }
-
-      .cartBtnBox {
-        margin-top: 53px;
-        .KeepBtn {
+        .emptyImg {
           width: 200px;
-          height: 65px;
-          border: 1px solid black;
-          margin-right: 12px;
-          border-radius: 9px;
-          font-size: 18px;
         }
-
-        .purchaseBtn {
-          width: 200px;
-          height: 65px;
+        .emptyTitle {
+          color: #838383;
+          font-size: 22px;
+          margin: 10px 0px 60px 0px;
+        }
+        .buyBtn {
           background-color: black;
+          width: 400px;
+          height: 60px;
+          border-radius: 15px;
           color: white;
-          border-radius: 9px;
-          font-size: 18px;
         }
       }
     }
