--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -66,10 +66,16 @@
       .loginBtn {
         margin-top: 30px;
         color: white;
-        background-color: black;
+        background-color: #cbcbcb;
         width: 400px;
         height: 60px;
         border-radius: 10px;
+        cursor: default;
+
+        &.true {
+          background-color: black;
+          cursor: pointer;
+        }
       }
     }
   }
