--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,6 +1,6 @@
 .login {
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
   background-color: #f5f5f5;
 
   .loginContainer {
@@ -34,35 +34,63 @@
       font-size: 18px;
       margin-bottom: 50px;
 
-      .email {
-        border-bottom: 2px solid black;
-        height: 30px;
-        padding-left: 10px;
-        padding-bottom: 13px;
-        margin-bottom: 5px;
+      .emailBox {
+        position: relative;
 
-        &::placeholder {
-          font-size: 15px;
-          color: #cbcdd5;
-        }
-      }
-
-      .password {
-        border-bottom: 2px solid black;
-        height: 30px;
-        padding-left: 10px;
-        padding-bottom: 13px;
-        margin-bottom: 30px;
-        &::placeholder {
+        .email {
+          width: 100%;
+          border-bottom: 2px solid black;
           height: 30px;
-          font-size: 15px;
-          color: #cbcdd5;
+          padding-left: 10px;
+          padding-bottom: 13px;
+          margin-bottom: 5px;
+
+          &::placeholder {
+            font-size: 15px;
+            color: #cbcdd5;
+          }
+        }
+
+        .fa-check {
+          position: absolute;
+          right: 7px;
         }
       }
+
       .plzCheck {
         font-size: 12px;
         color: #d91d1d;
       }
+
+      .passwordBox {
+        position: relative;
+        .password {
+          border-bottom: 2px solid black;
+          height: 30px;
+          padding-left: 10px;
+          padding-bottom: 13px;
+          margin-top: 30px;
+          width: 100%;
+
+          &::placeholder {
+            font-size: 15px;
+            color: #cbcdd5;
+          }
+        }
+        .eyeBox {
+          position: absolute;
+          right: 6px;
+          bottom: 10px;
+          cursor: pointer;
+
+          .fa-eye-slash {
+            position: absolute;
+            right: -1px;
+            bottom: 0px;
+          }
+        }
+      }
+
       .loginBtn {
         margin-top: 30px;
         color: white;
