--- a/src/pages/DetailPage/Toast/ItemList.scss
+++ b/src/pages/DetailPage/Toast/ItemList.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding: 32px 0px 32px 0px;
 
-  .itemContent {
+  .itemContentBox {
     overflow-y: scroll;
 
     .itemMain {
