[에러 수정] : ItemList.scss className itemContent::webkit부분 -> itemContentBox 로 변경

--- a/src/pages/DetailPage/Toast/ItemList.scss
+++ b/src/pages/DetailPage/Toast/ItemList.scss
@@ -55,7 +55,7 @@
       }
     }
   }
-  .itemContent::-webkit-scrollbar {
+  .itemContentBox::-webkit-scrollbar {
     display: none;
   }
   .itemBuy {
