[수정] 버튼에 이벤트를 달지않고 box 자체에 onClick 이벤트 부여함

--- a/src/pages/DetailPage/DropDown/DropDown.scss
+++ b/src/pages/DetailPage/DropDown/DropDown.scss
@@ -6,6 +6,7 @@
   border-top: 1px solid #f0f0f0;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 
   button {
     font-size: 30px;
