[리팩토링]test.js 제거, 컴포넌트명 수정, scss 수정, 주석 제거

--- a/src/pages/DetailPage/BuyModal/BuyModal.scss
+++ b/src/pages/DetailPage/BuyModal/BuyModal.scss
@@ -46,6 +46,15 @@
         height: 56px;
         padding: 16px;
         border-bottom: 1px solid #cbcbcb;
+
+        .defaultText {
+          color: #cbcbcb;
+          font-weight: 900;
+        }
+
+        .arrowButton {
+          font-size: 30px;
+        }
       }
     }
 
