--- a/src/pages/DetailPage/BuyModal/ItemList.scss
+++ b/src/pages/DetailPage/BuyModal/ItemList.scss
@@ -45,6 +45,9 @@
 
           .count {
             display: flex;
+            height: 28px;
+            align-items: center;
+            border: 1px solid #cbcbcb;
 
             span {
               font-size: 16px;
