--- a/src/pages/Login/EmailBox/EmailBox.scss
+++ b/src/pages/Login/EmailBox/EmailBox.scss
@@ -1,34 +1,36 @@
 .emailBox {
-  position: relative;
+  .emailInput {
+    position: relative;
 
-  .email {
-    width: 100%;
-    border-bottom: 2px solid #cbcbcb;
-    height: 30px;
-    padding-left: 10px;
-    padding-bottom: 13px;
-    margin-bottom: 5px;
+    .email {
+      width: 100%;
+      border-bottom: 2px solid #cbcbcb;
+      height: 30px;
+      padding-left: 10px;
+      padding-bottom: 13px;
+      margin-bottom: 5px;
 
-    &::placeholder {
-      font-size: 15px;
-      color: #cbcdd5;
+      &::placeholder {
+        font-size: 15px;
+        color: #cbcdd5;
+      }
+      &:focus {
+        border-bottom: 2px solid black;
+      }
+      &.true {
+        border-bottom: 2px solid #d91d1d;
+        caret-color: #d91d1d;
+      }
     }
-    &:focus {
-      border-bottom: 2px solid black;
-    }
-    &.true {
-      border-bottom: 2px solid #d91d1d;
-      caret-color: #d91d1d;
+
+    .fa-check {
+      position: absolute;
+      right: 7px;
     }
   }
 
-  .fa-check {
-    position: absolute;
-    right: 7px;
+  .plzCheck {
+    font-size: 12px;
+    color: #d91d1d;
   }
-}
-
-.plzCheck {
-  font-size: 12px;
-  color: #d91d1d;
 }
