--- a/src/pages/Login/PasswordBox/PasswordBox.scss
+++ b/src/pages/Login/PasswordBox/PasswordBox.scss
@@ -1,28 +1,36 @@
 .passwordBox {
-  position: relative;
-  .password {
-    border-bottom: 2px solid black;
-    height: 30px;
-    padding-left: 10px;
-    padding-bottom: 13px;
-    margin-top: 30px;
-    width: 100%;
+  .passwordInput {
+    position: relative;
+    .password {
+      border-bottom: 2px solid black;
+      height: 30px;
+      padding-left: 10px;
+      padding-bottom: 13px;
+      margin-top: 30px;
+      width: 100%;
 
-    &::placeholder {
-      font-size: 15px;
-      color: #cbcdd5;
+      &::placeholder {
+        font-size: 15px;
+        color: #cbcdd5;
+      }
+    }
+    .eyeBox {
+      position: absolute;
+      right: 6px;
+      bottom: 10px;
+      cursor: pointer;
+
+      .fa-eye-slash {
+        position: absolute;
+        right: -1px;
+        bottom: 0px;
+      }
     }
   }
-  .eyeBox {
-    position: absolute;
-    right: 6px;
-    bottom: 10px;
-    cursor: pointer;
 
-    .fa-eye-slash {
-      position: absolute;
-      right: -1px;
-      bottom: 0px;
-    }
+  .plzCheck {
+    font-size: 12px;
+    color: #d91d1d;
+    margin-top: 5px;
   }
 }
