Add : 패스워드 border 포커스에 따른 색상 변경 추가

--- a/src/pages/Login/PasswordBox/PasswordBox.scss
+++ b/src/pages/Login/PasswordBox/PasswordBox.scss
@@ -2,7 +2,7 @@
   .passwordInput {
     position: relative;
     .password {
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid #cbcbcb;
       height: 30px;
       padding-left: 10px;
       padding-bottom: 13px;
@@ -12,6 +12,10 @@
       &::placeholder {
         font-size: 15px;
         color: #cbcdd5;
+      }
+
+      &:focus {
+        border-bottom: 2px solid black;
       }
     }
     .eyeBox {
