--- a/src/pages/Main/ProductContent/Product/product.scss
+++ b/src/pages/Main/ProductContent/Product/product.scss
@@ -1,19 +1,14 @@
-.ProductInfo {
-  margin-right: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.productRigth {
+  margin-right: 21px;
 
   .product {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    cursor: pointer;
+    padding: 0 8px;
     .productImg {
       width: 250px;
       height: 250px;
-      -webkit-user-drag: none;
     }
 
     .productInfo {
