--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -50,6 +50,14 @@
             padding-left: 10px;
             padding-bottom: 13px;
             margin-bottom: 5px;
+
+            &[type='number']::-webkit-outer-spin-button,
+            &[type='number']::-webkit-inner-spin-button {
+              -webkit-appearance: none;
+              -moz-appearance: none;
+              appearance: none;
+            }
+
             &::placeholder {
               font-size: 15px;
               color: #cbcdd5;
@@ -64,6 +72,7 @@
           }
           .fa-check {
             position: absolute;
+            top: 3px;
             right: 7px;
           }
 
