--- a/src/pages/Main/MainCategory/MainCategory.scss
+++ b/src/pages/Main/MainCategory/MainCategory.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    padding: 0 44px;
 
     .categoryName {
       display: flex;
@@ -14,7 +15,7 @@
       align-items: center;
       width: 164px;
       padding: 12px 16px;
-      margin: 4px 16px;
+      margin: 10px 16px;
       border: 1px solid #f0f0f0;
       border-radius: 2px;
 
