상세페이지 overview 데이터 통신 및 세팅 완료

--- a/src/pages/DetailPage/Review/Review.scss
+++ b/src/pages/DetailPage/Review/Review.scss
@@ -30,6 +30,10 @@
       align-items: center;
       justify-content: center;
 
+      .reviewStarAverageColor {
+        color: #58c3cc;
+      }
+
       span {
         margin-top: 25px;
       }
