--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,6 @@
 .footerContainer {
   width: 100%;
+  /* height: 100vh; */
   padding-bottom: 48px;
   display: flex;
   flex-direction: column;
@@ -7,6 +8,7 @@
   justify-content: center;
   color: #fff;
   background-color: #1c1c1c;
+  vertical-align: baseline;
 
   .footerBox {
     width: 1140px;
