--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -19,7 +19,7 @@
       flex-wrap: nowrap;
       align-items: center;
       overflow-x: scroll;
-      // overflow-y: hidden;
+      overflow-y: hidden;
 
       &::-webkit-scrollbar {
         display: none;
