--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,19 +12,19 @@
   .footerBox {
     width: 1140px;
 
-    .footerTop {
+    .footerWebLinkBox {
       width: 100%;
       display: flex;
       padding: 28px 20px;
       font-size: 14px;
       border-bottom: 1px solid #838383;
 
-      .footerTopItem2 {
-        margin-left: 50px;
+      .footerWebLinkTopItem {
+        margin-right: 50px;
       }
     }
 
-    .footerMiddle {
+    .footerInfoBox {
       display: flex;
       padding: 0px 16px;
       justify-content: space-between;
@@ -62,7 +62,7 @@
           margin-top: 10px;
 
           .contactCompanyServiceNumberItem {
-            margin-left: 28px;
+            margin-right: 28px;
             font-size: 12px;
             color: #a7a7a7;
           }
@@ -70,7 +70,7 @@
       }
     }
 
-    .footerBottom {
+    .footerDocumentBox {
       display: flex;
       padding: 0px 16px;
       margin: 40px 0px 0px;
@@ -83,9 +83,9 @@
         align-items: center;
 
         .companyDocumentItem {
-          margin-left: 20px;
-          border-left: 1px solid #838383;
-          padding-left: 20px;
+          margin-right: 20px;
+          border-right: 1px solid #838383;
+          padding-right: 20px;
         }
       }
     }
