--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -32,7 +32,8 @@
         color: #838383;
         cursor: pointer;
       }
-      .categorySelector {
+
+      .currentCategory {
         border-bottom: 3px solid #1c1c1c;
         color: #1c1c1c;
         font-weight: 700;
