--- a/src/pages/SignUp/PhoneNumInput/PhoneNumber.scss
+++ b/src/pages/SignUp/PhoneNumInput/PhoneNumber.scss
@@ -1,4 +1,4 @@
-.emailInput {
+.phoneNumberInput {
   position: relative;
   margin-bottom: 30px;
 
@@ -16,13 +16,29 @@
       padding-left: 10px;
       padding-bottom: 13px;
       margin-bottom: 5px;
+
       &::placeholder {
         font-size: 15px;
         color: #cbcdd5;
       }
+
       &:focus {
         border-bottom: 2px solid black;
       }
+
+      &.true {
+        border-bottom: 2px solid #d91d1d;
+        caret-color: #d91d1d;
+      }
+    }
+    .plzCheck {
+      font-size: 12px;
+      color: #d91d1d;
+    }
+    .fa-check {
+      position: absolute;
+      top: 3px;
+      right: 7px;
     }
   }
 }
