--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,7 +1,24 @@
 .mainHeader {
+  position: fixed;
+  margin: 0 auto;
+  width: 100%;
   height: 68px;
   background-color: #ffffff;
   border-bottom: 1px solid rgb(235, 235, 235);
+  top: 0;
+  z-index: 1000;
+  transition: all 0.4s;
+
+  &.noHeader {
+    visibility: hidden;
+    height: 0px;
+  }
+
+  &.fixed {
+    height: 68px;
+    visibility: visible;
+    z-index: 1000;
+  }
 
   .headerGroup {
     display: flex;
