리뷰 페이지네이션 재구현 완료

--- a/src/pages/DetailPage/Review/Review.scss
+++ b/src/pages/DetailPage/Review/Review.scss
@@ -32,6 +32,7 @@
 
       .reviewStarAverageColor {
         color: #58c3cc;
+        text-align: center;
       }
 
       span {
@@ -46,5 +47,12 @@
       align-items: center;
       justify-content: center;
     }
+  }
+
+  .reviewPaginationContainer {
+    display: flex;
+    width: 100%;
+    margin: 100px 0px 100px 0px;
+    justify-content: center;
   }
 }
